<resources>
    <string name="app_name">water.src</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login to water.src</string>
    <string name="title_activity_registration">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_privilege">User Privilege Level</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_username_taken">This username is already taken</string>\
    <string name="go_home">Go Home</string>

    <!-- Strings for updating profile -->
    <string name="update_prompt_email">Email</string>
    <string name="update_prompt_address">Postal Address</string>
    <string name="update_prompt_phone">Phone Number</string>
    <string name="update_prompt_password">New Password</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="profile_update">Update Profile</string>

    <!-- Strings for app -->
    <string name="alt_logo">water.src Logo</string>
    <string name="title_activity_main">water.src Main Page</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="action_submit">Submit</string>

    <!-- Titles -->
    <string name="title_activity_list">Water Report List</string>
    <string name="title_activity_maps">Map</string>

    <!-- Main screen -->
    <string name="report_list">View Source Reports</string>
    <string name="quality_report_list">View Quality Reports</string>
    <string name="new_source_report">Add New Source Report</string>
    <string name="new_quality_report">Add New Quality Report</string>
    <string name="view_map">View Map</string>
    <string name="view_historical_report">View Historical Report</string>
    <string name="admin_panel">View Admin Panel</string>

    <!-- Strings for new water report -->
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_longitude">Longitude</string>
    <string name="prompt_water_source_type">Water Source Type</string>
    <string name="prompt_water_condition">Water Condition</string>
    <string name="invalid_latitude">Must be between -90.0 and 90.0</string>
    <string name="invalid_longitude">Must be between -180.0 and 180.0</string>
    <string name="prompt_virusPPM">Virus PPM</string>
    <string name="prompt_contaminantPPM">Contaminant PPM</string>
    <string name="invalid_PPM">Must be between 0 and 1,000,000</string>

    <!-- Strings for historical reports -->
    <string name="title_activity_historical_report_options">Options for Historical Report</string>
    <string name="prompt_year">Year</string>
    <string name="radio_virus">Virus</string>
    <string name="radio_contaminant">Contaminant</string>

    <!-- Strings for admin panel -->
    <string name="title_activity_account_list">List of Accounts</string>
    <string name="prompt_name">Name</string>
    <string name="is_blocked">Is Blocked?</string>
    <string name="is_banned">Is Banned?</string>
    <string name="ban_account">Ban account</string>
    <string name="unban_account">Unban account</string>
    <string name="unblock_account">Unblock Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_activity_view_user">View User Information</string>
</resources>
