<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.zoinks.waterreporting.controllers.WelcomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/alt_logo"
        android:src="@drawable/logo" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.zoinks.waterreporting.controllers.WelcomeActivity"
        tools:showIn="@layout/activity_welcome">

        <Button
            android:text="@string/action_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="183dp"
            android:id="@+id/register_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/action_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_toEndOf="@+id/register_button"
            android:layout_alignBaseline="@+id/register_button"
            android:layout_alignBottom="@+id/register_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="56dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
